testsuite/tests/safeHaskell/safeInfered/Mixed03.stderr

Mixed03.hs:6:1: error: [GHC-70172]
    Module DW is imported both as a safe and unsafe import!
